Agregar la configuración final del proyecto

--- a/index.html
+++ b/index.html
@@ -8,13 +8,19 @@
     <link href="estilo.css" rel="stylesheet">
 </head>
 <body>
+    <!--Comentarios en HTML -->
     <p>Comentarios en:</p>
-    <!--lista desordenada-->
     <ul>
         <li>HTML</li>
         <li>CSS</li>
         <li>JavaScript</li>
     </ul>
+
+    <button onclick="funcion_de_boton()">Click</button>
+    <!--Se mostrara cuando se haga clic en el boton -->
+    <p id="ejemplo"></p>
+
+    <button onclick="funcionCoches()">Carros</button>
 
     <!-- 
     <div class="ol-bloque">
